# WordleDesktop

./: .gitignore  .replit  CMakeLists.txt  README.md  app.c  common.c  common.h  event.c  event.h  gui.c  gui.h
.github/workflows/: windows.yml
include/: common.h  event.h  guess.h  gui.h  input.h  score.h  wordles.h  words.h
include/ui/: banner.h  box.h  color.h  format.h  keyboard.h  labels.h  main.h  rows.h  window.h
res/: wordle.rc
src/: app.c  common.c  event.c  guess.c  gui.c  input.c  score.c  wordles.c  words.c
src/ui/: banner.c  box.c  color.c  format.c  keyboard.c  labels.c  main.c  rows.c  window.c
